@@ -1,41 +1,34 @@
 package com.tramchester.integration.graph.railAndTram;
 
-import com.google.common.collect.Lists;
 import com.tramchester.ComponentContainer;
 import com.tramchester.ComponentsBuilder;
-import com.tramchester.domain.Route;
-import com.tramchester.domain.Service;
 import com.tramchester.domain.id.IdFor;
 import com.tramchester.domain.id.IdSet;
-import com.tramchester.domain.input.Trip;
 import com.tramchester.domain.places.InterchangeStation;
 import com.tramchester.domain.places.RouteStation;
 import com.tramchester.domain.places.Station;
 import com.tramchester.domain.reference.TransportMode;
 import com.tramchester.graph.GraphDatabase;
-import com.tramchester.graph.GraphQuery;
-import com.tramchester.graph.TransportRelationshipTypes;
+import com.tramchester.graph.facade.GraphNode;
+import com.tramchester.graph.facade.GraphRelationship;
+import com.tramchester.graph.facade.GraphTransaction;
 import com.tramchester.graph.graphbuild.GraphLabel;
-import com.tramchester.graph.graphbuild.GraphProps;
 import com.tramchester.graph.graphbuild.StagedTransportGraphBuilder;
 import com.tramchester.integration.testSupport.RailAndTramGreaterManchesterConfig;
 import com.tramchester.integration.testSupport.rail.RailStationIds;
 import com.tramchester.integration.testSupport.tram.IntegrationTramTestConfig;
 import com.tramchester.repository.InterchangeRepository;
 import com.tramchester.repository.StationRepository;
-import com.tramchester.repository.TransportData;
 import com.tramchester.testSupport.TestEnv;
 import com.tramchester.testSupport.testTags.GMTest;
-import org.assertj.core.util.Streams;
 import org.junit.jupiter.api.*;
-import org.neo4j.graphdb.*;
+import org.neo4j.graphdb.Direction;
 
 import java.time.Duration;
 import java.util.List;
 import java.util.Set;
-import java.util.SortedSet;
-import java.util.TreeSet;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static com.tramchester.graph.TransportRelationshipTypes.*;
 import static com.tramchester.testSupport.reference.TramStations.*;
@@ -45,9 +38,7 @@ import static org.junit.jupiter.api.Assertions.*;
 class RailAndTramGraphBuilderTest {
     private static ComponentContainer componentContainer;
 
-    private TransportData transportData;
-    private Transaction txn;
-    private GraphQuery graphQuery;
+    private GraphTransaction txn;
     private StationRepository stationRepository;
 
     @BeforeAll
@@ -60,9 +51,6 @@ class RailAndTramGraphBuilderTest {
     @BeforeEach
     void beforeEachTestRuns() {
 
-        transportData = componentContainer.get(TransportData.class);
-
-        graphQuery = componentContainer.get(GraphQuery.class);
         stationRepository = componentContainer.get(StationRepository.class);
         GraphDatabase graphDatabase = componentContainer.get(GraphDatabase.class);
 
@@ -84,14 +72,15 @@ class RailAndTramGraphBuilderTest {
     @Test
     void shouldHaveLinkRelationshipsCorrectForInterchange() {
         Station cornbrook = Cornbrook.from(stationRepository);
-        Node cornbrookNode = graphQuery.getStationNode(txn, cornbrook);
-        Iterable<Relationship> outboundLinks = cornbrookNode.getRelationships(Direction.OUTGOING, LINKED);
+        GraphNode cornbrookNode = txn.findNode(cornbrook);
+        Stream<GraphRelationship> outboundLinks = cornbrookNode.getRelationships(txn, Direction.OUTGOING, LINKED);
 
-        List<Relationship> list = Lists.newArrayList(outboundLinks);
+        List<GraphRelationship> list = outboundLinks.toList();
         assertEquals(3, list.size());
 
-        Set<IdFor<Station>> destinations = list.stream().map(Relationship::getEndNode).
-                map(GraphProps::getStationId).collect(Collectors.toSet());
+        Set<IdFor<Station>> destinations = list.stream().
+                map(graphRelationship -> graphRelationship.getEndNode(txn)).
+                map(GraphNode::getStationId).collect(Collectors.toSet());
 
         assertTrue(destinations.contains(TraffordBar.getId()));
         assertTrue(destinations.contains(Pomona.getId()));
@@ -104,14 +93,14 @@ class RailAndTramGraphBuilderTest {
         Set<RouteStation> routeStations = stationRepository.getRouteStationsFor(Piccadilly.getId());
 
         routeStations.forEach(routeStation -> {
-            Node node = graphQuery.getRouteStationNode(txn, routeStation);
+            GraphNode node = txn.findNode(routeStation);
 
-            Relationship toStation = node.getSingleRelationship(ROUTE_TO_STATION, Direction.OUTGOING);
-            Duration costToStation = GraphProps.getCost(toStation);
+            GraphRelationship toStation = node.getSingleRelationship(txn, ROUTE_TO_STATION, Direction.OUTGOING);
+            Duration costToStation = toStation.getCost(); // GraphProps.getCost(toStation);
             assertEquals(Duration.ZERO, costToStation, "wrong cost for " + routeStation);
 
-            Relationship fromStation = node.getSingleRelationship(STATION_TO_ROUTE, Direction.INCOMING);
-            Duration costFromStation = GraphProps.getCost(fromStation);
+            GraphRelationship fromStation = node.getSingleRelationship(txn, STATION_TO_ROUTE, Direction.INCOMING);
+            Duration costFromStation = fromStation.getCost(); // GraphProps.getCost(fromStation);
             Duration expected = routeStation.getStation().getMinChangeDuration();
             assertEquals(expected, costFromStation, "wrong cost for " + routeStation);
         });
@@ -124,25 +113,25 @@ class RailAndTramGraphBuilderTest {
 
         Duration expectedCost = Duration.ofMinutes(1);
 
-        Node altyTramNode = graphQuery.getStationNode(txn, altyTram);
-        Node altyTrainNode = graphQuery.getStationNode(txn, altyTrain);
+        GraphNode altyTramNode = txn.findNode(altyTram);
+        GraphNode altyTrainNode = txn.findNode(altyTrain);
 
         assertNotNull(altyTramNode);
         assertNotNull(altyTrainNode);
 
-        List<Relationship> fromTram = Streams.stream(altyTramNode.getRelationships(Direction.OUTGOING, NEIGHBOUR)).collect(Collectors.toList());
+        List<GraphRelationship> fromTram = altyTramNode.getRelationships(txn, Direction.OUTGOING, NEIGHBOUR).toList();
         assertEquals(1, fromTram.size(), "Wrong number of neighbours " + fromTram);
 
-        Relationship tramNeighbour = fromTram.get(0);
-        assertEquals(altyTrainNode.getId(), tramNeighbour.getEndNode().getId());
-        assertEquals(expectedCost, GraphProps.getCost(tramNeighbour));
+        GraphRelationship tramNeighbour = fromTram.get(0);
+        assertEquals(altyTrainNode, tramNeighbour.getEndNode(txn)); // GraphNode.fromEnd(tramNeighbour));
+        assertEquals(expectedCost, tramNeighbour.getCost());
 
-        List<Relationship> fromTrain = Streams.stream(altyTrainNode.getRelationships(Direction.OUTGOING, NEIGHBOUR)).collect(Collectors.toList());
+        List<GraphRelationship> fromTrain = altyTrainNode.getRelationships(txn, Direction.OUTGOING, NEIGHBOUR).toList();
         assertEquals(1, fromTrain.size(), "Wrong number of neighbours " + fromTram);
 
-        Relationship trainNeighbour = fromTrain.get(0);
-        assertEquals(altyTramNode.getId(), trainNeighbour.getEndNode().getId());
-        assertEquals(expectedCost, GraphProps.getCost(trainNeighbour));
+        GraphRelationship trainNeighbour = fromTrain.get(0);
+        assertEquals(altyTramNode, trainNeighbour.getEndNode(txn)); //GraphNode.fromEnd(trainNeighbour));
+        assertEquals(expectedCost, trainNeighbour.getCost());
 
     }
 
@@ -152,7 +141,7 @@ class RailAndTramGraphBuilderTest {
 
         IdSet<RouteStation> noTramRouteStationNode = routeStations.stream().
                 filter(routeStation -> routeStation.getTransportModes().contains(TransportMode.Tram)).
-                filter(routeStation -> graphQuery.getRouteStationNode(txn, routeStation) == null).
+                filter(routeStation -> txn.findNode(routeStation) == null).
                 collect(IdSet.collector());
 
         assertTrue(noTramRouteStationNode.isEmpty(), noTramRouteStationNode.toString());
@@ -163,7 +152,7 @@ class RailAndTramGraphBuilderTest {
                 collect(Collectors.toSet());
 
         IdSet<RouteStation> noTrainRouteStationNode = trainRouteStations.stream().
-                filter(routeStation -> graphQuery.getRouteStationNode(txn, routeStation) == null).
+                filter(routeStation -> txn.findNode(routeStation) == null).
                 collect(IdSet.collector());
 
         int numRouteStations = trainRouteStations.size();
@@ -178,102 +167,11 @@ class RailAndTramGraphBuilderTest {
         IdSet<Station> fromConfigAndDiscovered = interchangeRepository.getAllInterchanges().stream().
                 map(InterchangeStation::getStationId).collect(IdSet.idCollector());
 
-        ResourceIterator<Node> interchangeNodes = txn.findNodes(GraphLabel.INTERCHANGE);
+        Stream<GraphNode> interchangeNodes = txn.findNodes(GraphLabel.INTERCHANGE);
 
-        IdSet<Station> fromDB = interchangeNodes.stream().map(GraphProps::getStationId).collect(IdSet.idCollector());
+        IdSet<Station> fromDB = interchangeNodes.map(GraphNode::getStationId).collect(IdSet.idCollector());
 
         assertEquals(fromConfigAndDiscovered, fromDB, "Graph clean and rebuild needed?");
     }
 
-//    private void checkOutboundConsistency(TramStations tramStation, KnownTramRoute knownRoute) {
-//        Station station = tramStation.from(stationRepository);
-//        Route route = tramRouteHelper.getOneRoute(knownRoute, when);
-//
-//        checkOutboundConsistency(station, route);
-//    }
-
-//    private void checkOutboundConsistency(Station station, Route route) {
-//        RouteStation routeStation = stationRepository.getRouteStation(station, route);
-//
-//        List<Relationship> routeStationOutbounds = graphQuery.getRouteStationRelationships(txn, routeStation, Direction.OUTGOING);
-//
-//        assertTrue(routeStationOutbounds.size()>0);
-//
-//        // since can have 'multiple' route stations due to dup routes use set here
-//       IdSet<Service> serviceRelatIds = routeStationOutbounds.stream().
-//                filter(relationship -> relationship.isType(TransportRelationshipTypes.TO_SERVICE)).
-//                map(GraphProps::getServiceId).
-//                collect(IdSet.idCollector());
-//
-//        Set<Trip> fileCallingTrips =
-//                transportData.getRouteById(route.getId()).getTrips().stream().
-//
-//                filter(trip -> trip.callsAt(station)).
-//                collect(Collectors.toSet());
-//
-//        IdSet<Service> fileSvcIdFromTrips = fileCallingTrips.stream().
-//                map(trip -> trip.getService().getId()).
-//                collect(IdSet.idCollector());
-//
-//        // NOTE: Check clean target that and graph has been rebuilt if see failure here
-//        assertEquals(fileSvcIdFromTrips.size(), serviceRelatIds.size(),
-//                "Did not match " + fileSvcIdFromTrips + " and " + serviceRelatIds);
-//        assertTrue(fileSvcIdFromTrips.containsAll(serviceRelatIds));
-//
-//        long connectedToRouteStation = routeStationOutbounds.stream().filter(relationship -> relationship.isType(ROUTE_TO_STATION)).count();
-//        assertNotEquals(0, connectedToRouteStation);
-//
-//        List<Relationship> incomingToRouteStation = graphQuery.getRouteStationRelationships(txn, routeStation, Direction.INCOMING);
-//        long fromStation = Streams.stream(incomingToRouteStation).filter(relationship -> relationship.isType(STATION_TO_ROUTE)).count();
-//        assertNotEquals(0, fromStation);
-//    }
-
-//    private void checkInboundConsistency(TramStations tramStation, KnownTramRoute knownRoute) {
-//        Route route = tramRouteHelper.getOneRoute(knownRoute, when);
-//        Station station = tramStation.from(stationRepository);
-//
-//        checkInboundConsistency(station, route);
-//    }
-
-    private void checkInboundConsistency(Station station, Route route) {
-        RouteStation routeStation = stationRepository.getRouteStation(station, route);
-        assertNotNull(routeStation, "Could not find a route for " + station.getId() + " and  " + route.getId());
-        List<Relationship> inbounds = graphQuery.getRouteStationRelationships(txn, routeStation, Direction.INCOMING);
-
-        List<Relationship> graphTramsIntoStation = inbounds.stream().
-                filter(inbound -> inbound.isType(TransportRelationshipTypes.TRAM_GOES_TO)).collect(Collectors.toList());
-
-        long boardingCount = inbounds.stream().
-                filter(relationship -> relationship.isType(TransportRelationshipTypes.BOARD)
-                        || relationship.isType(TransportRelationshipTypes.INTERCHANGE_BOARD)).count();
-        assertEquals(1, boardingCount);
-
-        SortedSet<IdFor<Service>> graphInboundSvcIds = graphTramsIntoStation.stream().
-                map(GraphProps::getServiceId).collect(Collectors.toCollection(TreeSet::new));
-
-        Set<Trip> callingTrips =
-                transportData.getRouteById(route.getId()).getTrips().stream().
-                filter(trip -> trip.callsAt(station)). // calls at , but not starts at because no inbound for these
-                //filter(trip -> !trip.getStopCalls().getStopBySequenceNumber(trip.getSeqNumOfFirstStop()).getStation().equals(station)).
-                filter(trip -> !trip.getStopCalls().getFirstStop().getStation().equals(station)).
-                collect(Collectors.toSet());
-
-        SortedSet<IdFor<Service>> svcIdsFromCallingTrips = callingTrips.stream().
-                map(trip -> trip.getService().getId()).collect(Collectors.toCollection(TreeSet::new));
-
-        assertEquals(svcIdsFromCallingTrips, graphInboundSvcIds);
-
-        Set<IdFor<Trip>> graphInboundTripIds = graphTramsIntoStation.stream().
-                map(GraphProps::getTripId).
-                collect(Collectors.toSet());
-
-        assertEquals(graphTramsIntoStation.size(), graphInboundTripIds.size()); // should have an inbound link per trip
-
-        Set<IdFor<Trip>> tripIdsFromFile = callingTrips.stream().
-                map(Trip::getId).
-                collect(Collectors.toSet());
-
-        tripIdsFromFile.removeAll(graphInboundTripIds);
-        assertEquals(0, tripIdsFromFile.size());
-    }
 }
